update project configs and fix imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "moduleDetection": "force",
     "target": "ESNext",
     "module": "ESNext",
-    "outDir": "js",
+    "outDir": "out",
     "baseUrl": "./",
     "rootDir": ".",
     "paths": {
@@ -19,7 +19,10 @@
       ],
     }
   },
+  "include": [
+    "./src/**/*"
+  ],
   "exclude": [
-    "temp"
+    "./node_modules"
   ]
 }
