--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "type": "module",
   "name": "@delqb/fluidengine",
+  "type": "module",
   "version": "0.0.0",
   "description": "A versatile and performant typescript game engine",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/delqb/FluidEngine.git"
@@ -21,5 +23,14 @@
     "vite": "^7.0.0",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4"
-  }
+  },
+  "exports": {
+    "./*": {
+      "import": "./dist/*",
+      "types": "./dist/*"
+    }
+  },
+  "files": [
+    "dist"
+  ]
 }
