Adjust and move node scripts to package.json

--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "scripts": {
+    "clean": "rmdir /s /q .\\dist",
+    "build": "npm run clean && tsc",
+    "prepare": "tsc"
+  }
 }
