--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
+    "removeComments": false,
     "paths": {
       "@fluid/*": [
         "./src/*"
@@ -26,10 +27,5 @@
   ],
   "exclude": [
     "./node_modules"
-  ],
-  "scripts": {
-    "clean": "rm -rf dist",
-    "build": "npm run clean && tsc",
-    "prepare": "npm run build"
-  }
+  ]
 }
