--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "moduleDetection": "force",
     "target": "ESNext",
     "module": "ESNext",
-    "baseUrl": "./",
+    "baseUrl": "src",
     "rootDir": "src",
     "outDir": "dist",
     "declaration": true,
@@ -12,13 +12,13 @@
     "removeComments": false,
     "paths": {
       "@fluid/*": [
-        "./src/*"
+        "./*"
       ],
       "@fluidcore/*": [
-        "./src/core/*"
+        "./core/*"
       ],
       "@fluidlib/*": [
-        "./src/lib/*"
+        "./lib/*"
       ]
     }
   },
