fix package.json prepare command to allow safe package import from github

--- a/package.json
+++ b/package.json
@@ -67,6 +67,6 @@
   "scripts": {
     "clean": "rmdir /s /q .\\dist",
     "build": "npm run clean && tsc",
-    "prepare": "npm run build"
+    "prepare": "tsc"
   }
 }
